# OPPlab5

./: CMakeLists.txt  lab5.cpp
